# spdb

./: .gitignore  README.md  pyproject.toml  setup.py
spdb/: __init__.py  db.py  db_utils.py  loggers.py  quotes.py  restr.py  textvalidator.py  utils.py
