[project]
name = "spdb"
version = "2.1.3"
authors = [
  { name="Mrybs", email="mrybs2@gmail.com" },
]
description = "SPDB - Sassy Python DB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mrybs/spdb"
"Bug Tracker" = "https://github.com/mrybs/spdb/issues"